JavaScript ReactJS y Python

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
                 <div class="description-box slide-left">
                   <p class="description">
-                    Coderhouse Student, Certificado de Desenvolvimento da Web, Introdução a bancos de dados, tecnologias interativas, Kotling e Power BI, atualmente estudando JavaScript
+                    Coderhouse Student, Certificado de Desenvolvimento da Web, Introdução a bancos de dados, tecnologias interativas, Kotling e Power BI, JavaScript, ReactJS, y Python
                   </p>
                   
                 </div>
